# daily-market-report

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 54ad6b1629cf_initial_schema.py
backend/scripts/: export_openapi.py
backend/src/daily_scheduler/: __init__.py  cli.py  config.py  constants.py  database.py  main.py  tz.py
backend/src/daily_scheduler/application/: __init__.py
backend/src/daily_scheduler/domain/: __init__.py
backend/src/daily_scheduler/entrypoints/: __init__.py
backend/src/daily_scheduler/infrastructure/: __init__.py  dependencies.py
backend/src/daily_scheduler/models/: __init__.py  price.py  recommendation.py  report.py  retrospective.py
backend/src/daily_scheduler/routers/: dashboard.py  performance.py  pipeline.py  reports.py  retrospective.py  settings.py
backend/src/daily_scheduler/schemas/: performance.py  recommendation.py  report.py  settings.py
backend/src/daily_scheduler/services/: claude.py  email_sender.py  (+5 more)
backend/tests/: conftest.py  test_api.py  test_build_retrospective.py  test_check_recommendations.py  test_claude_provider.py  test_config.py  test_domain.py  test_email.py  test_fetch_market_data.py  test_integration.py  test_models.py  test_parser.py  test_pipeline.py  test_prompt.py  test_renderer.py  test_report_content.py  test_repositories.py  test_retrospective.py  test_retrospective_repository.py  test_screen_stocks.py  test_update_prices.py
(+147 files in other folders)
